--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ anyio==4.9.0
 asgiref==3.8.1
 black==25.1.0
 certifi==2025.7.14
+charset-normalizer==3.4.2
 click==8.2.1
 distro==1.9.0
 Django==5.2.3
 django-cors-headers==4.7.0
+django-extensions==4.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 h11==0.16.0
@@ -14,6 +16,8 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 jiter==0.10.0
+markdown-it-py==3.0.0
+mdurl==0.1.2
 mypy_extensions==1.1.0
 openai==1.95.1
 packaging==25.0
@@ -21,9 +25,14 @@ pathspec==0.12.1
 platformdirs==4.3.8
 pydantic==2.11.7
 pydantic_core==2.33.2
+Pygments==2.19.2
 PyJWT==2.9.0
+python-dotenv==1.1.1
+requests==2.32.4
+rich==14.0.0
 sniffio==1.3.1
 sqlparse==0.5.3
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+urllib3==2.5.0
