--- a/requirements.txt
+++ b/requirements.txt
@@ -16,9 +16,11 @@ httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 jiter==0.10.0
+joblib==1.5.1
 markdown-it-py==3.0.0
 mdurl==0.1.2
 mypy_extensions==1.1.0
+numpy==2.3.2
 openai==1.95.1
 packaging==25.0
 pathspec==0.12.1
@@ -30,8 +32,11 @@ PyJWT==2.9.0
 python-dotenv==1.1.1
 requests==2.32.4
 rich==14.0.0
+scikit-learn==1.7.1
+scipy==1.16.1
 sniffio==1.3.1
 sqlparse==0.5.3
+threadpoolctl==3.6.0
 tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
