--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,18 @@ black==25.1.0
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
+coverage==7.10.2
+crispy-bootstrap4==2025.6
 distro==1.9.0
+dj-database-url==3.0.1
 Django==5.2.3
 django-cors-headers==4.7.0
+django-crispy-forms==2.4
 django-extensions==4.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
+environs==14.3.0
+gunicorn==23.0.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
@@ -18,6 +24,7 @@ idna==3.10
 jiter==0.10.0
 joblib==1.5.1
 markdown-it-py==3.0.0
+marshmallow==4.0.0
 mdurl==0.1.2
 mypy_extensions==1.1.0
 numpy==2.3.2
@@ -25,6 +32,7 @@ openai==1.95.1
 packaging==25.0
 pathspec==0.12.1
 platformdirs==4.3.8
+psycopg==3.2.9
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
@@ -41,3 +49,4 @@ tqdm==4.67.1
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
+whitenoise==6.9.0
